Fix mobile arrow alignment. closes #1358

--- a/less/app.less
+++ b/less/app.less
@@ -695,22 +695,30 @@ svg {
 		font-size: 6rem;
 		background: transparent;
 		border: none;
-        line-height: 100vh;
         display: block;
+        line-height: 100%;
 
 		i {
             color: @grayMedium;
-            position: absolute;
             .vertical-center;
+            position: absolute;
         }
 	}
 	.nav-btn-left {
-		left: 1rem;
+		left: 0;
 		text-align: left;
+
+        i {
+            left: 1rem;
+        }
 	}
 	.nav-btn-right {
-		right: 1rem;
+		right: 0;
 		text-align: right;
+
+        i {
+            right: 1rem;
+        }
 	}
 
 	.touch & { display: block; }
